--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "sweetalert2": "^7.26.12"
   },
   "scripts": {
     "start": "react-scripts start",
