--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.4.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-charts": "^1.0.10",
     "react-dom": "^16.4.2",
     "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.0.7",
